--- a/index.html
+++ b/index.html
@@ -11,8 +11,16 @@
   </head>
   <body>
     <h1 class="mb-5">Welcome to phone shop</h1>
-    <div id="phone-container" class="row row-cols-1 row-cols-md-5 g-4">
+    <div class="mb-3">
+      <input
+        type="email"
+        class="form-control w-25 ms-3 mb-2"
+        id="searchText"
+        placeholder="search phones"
+      />
+      <button id="search-button" class="btn btn-primary ms-3">Search</button>
     </div>
+    <div id="phone-container" class="row row-cols-1 row-cols-md-5 g-4"></div>
     <script src="./app.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
   </body>
