--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
       />
       <button id="search-button" class="btn btn-primary ms-3">Search</button>
     </div>
+    <div class="d-none" id="no-found">
+        <h4 class="text-danger ms-3">No phones found</h4>
+    </div>
     <div id="phone-container" class="row row-cols-1 row-cols-md-5 g-4"></div>
     <script src="./app.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
