--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
       </div>
     </div>
     <div id="phone-container" class="row row-cols-1 row-cols-md-5 g-4"></div>
+    <div id="show-all" class="text-center mt-4 d-none">
+      <button id="show-button" class="btn btn-primary ">Show all</button>
+    </div>
     <script src="./app.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
   </body>
