enter event in search added

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         type="email"
         class="form-control w-25 ms-3 mb-2"
         id="searchText"
-        placeholder="search phones"
+        placeholder="search"
       />
       <button id="search-button" class="btn btn-primary ms-3">Search</button>
     </div>
@@ -35,7 +35,7 @@
         <span class="visually-hidden">Loading...</span>
       </div>
     </div>
-    <div id="phone-container" class="row row-cols-1 row-cols-md-5 g-4"></div>
+    <div id="phone-container" class="row row-cols-1 row-cols-md-5 container-fluid g-2"></div>
     <div id="show-all" class="text-center mt-4 d-none">
       <button id="show-button" class="btn btn-primary ">Show all</button>
     </div>
