details shown in modal

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     />
   </head>
   <body>
-    <h1 class="mb-5">Welcome to phone shop</h1>
+    <h1 class="mb-5 text-center">Welcome to phone shop</h1>
     <div class="mb-3">
       <input
         type="email"
@@ -18,7 +18,7 @@
         id="searchText"
         placeholder="search"
       />
-      <button id="search-button" class="btn btn-primary ms-3">Search</button>
+      <button id="search-button" class="btn btn-primary ms-3">Explore</button>
     </div>
     <div class="d-none" id="no-found">
       <h4 class="text-danger ms-3">No phones found</h4>
